k8s/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-demo
spec:
  selector:
    app: flask-demo
  ports:
    - name: flask
      protocol: TCP
      port: 5000
      targetPort: 5000
