k8s/bases/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "flask.k3d.localhost"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-demo
            port:
              number: 5000
